# generate-awscc-with-bedrock-claude-computer-use

./: .gitignore  CODEOWNERS  README.md  USAGE.md  config.py  dynamodb-schema.md  evaluation_agent.py  main.py  pyproject.toml  requirements.txt  start_orchestration.sh  target_resource.py
agents/: __init__.py  cleanup_agent.py  discovery_agent.py  documentation_agent.py  orchestrator_agent.py  storage_agent.py  terraform_agent.py  terraform_cleanup_agent.py  validation_agent.py
infrastructure/: README.md  destroy.sh  main.tf  outputs.tf  setup.sh  variables.tf
templates/resources/: .md.tmpl  generic_resource.md.tmpl
terraform/: README.md  data.tf  ecr.tf  iam.tf  kms.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  s3.tf  state.tf  variables.tf
terraform/src/: Dockerfile  build.sh  requirements.txt
terraform/src/lib/: awscc_tool_use.py  requirements.txt
terraform/src/lib/helpers/: __init__.py  explorer.py  loggers.py  prompt.py  s3_helper.py
terraform/src/lib/tools/: bash.py  computer.py  run.py
terraform/templates/: orchestrator.asl.json
