[project]
name = "tango-multi-agent-pipeline"
version = "1.0.0"
description = "Automated AWS CloudControl resource validation using multi-agent Terraform pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT-0"}
authors = [
    {name = "AWS Partner Solutions Architect", email = "aws-samples@amazon.com"}
]
keywords = ["aws", "terraform", "cloudcontrol", "awscc", "automation", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "strands-agents>=1.9.0",
    "strands-agents-tools>=0.2.8",
    "requests>=2.32.5",
    "boto3>=1.40.34",
]

[project.urls]
Homepage = "https://github.com/aws-samples/generate-awscc-with-bedrock-claude-computer-use"
Repository = "https://github.com/aws-samples/generate-awscc-with-bedrock-claude-computer-use"
Issues = "https://github.com/aws-samples/generate-awscc-with-bedrock-claude-computer-use/issues"

[project.scripts]
tango = "main:main"
tango-target = "target_resource:main"
tango-eval = "evaluation_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
